--- a/5_1_randomforest.ipynb
+++ b/5_1_randomforest.ipynb
@@ -1,23 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "5_1_randomforest.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "d-IAJLC2k1NX",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "d-IAJLC2k1NX"
       },
       "source": [
         "# 5.1 ランダムフォレストとは\n",
@@ -31,8 +18,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2XdIDbdlejUk",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "2XdIDbdlejUk"
       },
       "source": [
         "## プログラム実行前の設定など"
@@ -40,11 +27,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "wqHjwstVeXYt",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "wqHjwstVeXYt"
       },
+      "outputs": [],
       "source": [
         "# 乱数のシードを設定\n",
         "import random\n",
@@ -52,17 +41,17 @@
         "\n",
         "np.random.seed(1234)\n",
         "random.seed(1234)\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "RIhcLRqlem3V",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "RIhcLRqlem3V"
       },
+      "outputs": [],
       "source": [
         "# 使用するパッケージ（ライブラリと関数）を定義\n",
         "# 標準正規分布の生成用\n",
@@ -79,15 +68,13 @@
         "\n",
         "# その他\n",
         "import pandas as pd\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AWqP6yeQlI_t",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "AWqP6yeQlI_t"
       },
       "source": [
         "## データの作成"
@@ -95,11 +82,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "EJaQIHz4fNXb",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "EJaQIHz4fNXb"
       },
+      "outputs": [],
       "source": [
         "# データ数\n",
         "num_data = 200\n",
@@ -109,15 +98,13 @@
         "\n",
         "# 性別（0を女性、1を男性とします）\n",
         "x_2 = randint(0, 2, num_data)  # 0か1の乱数\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JiT_gc5ZmAQa",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "JiT_gc5ZmAQa"
       },
       "source": [
         "## テレビCMを見たかどうか"
@@ -125,11 +112,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "hfPbhhm6gvW6",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "hfPbhhm6gvW6"
       },
+      "outputs": [],
       "source": [
         "# ノイズの生成\n",
         "e_z = randn(num_data)\n",
@@ -146,15 +135,13 @@
         "for i in range(num_data):\n",
         "    Z_i = np.random.choice(2, size=1, p=[1-z_prob[i], z_prob[i]])[0]\n",
         "    Z = np.append(Z, Z_i)\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "b2PLquJGi2Te",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "b2PLquJGi2Te"
       },
       "source": [
         "## 購入量Yを作成"
@@ -162,25 +149,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "nv-ELtFqi5L5",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "nv-ELtFqi5L5"
       },
+      "outputs": [],
       "source": [
         "# ノイズの生成\n",
         "e_y = randn(num_data)\n",
         "\n",
         "Y = -x_1 + 30*x_2 + 10*Z + 80 + 10*e_y\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BHcdUlW9koTa",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "BHcdUlW9koTa"
       },
       "source": [
         "## データをまとめた表を作成し、平均値を比べる"
@@ -188,28 +175,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
-        "id": "HPqwrISXktRj",
-        "colab_type": "code",
-        "outputId": "472a7556-d2c0-4341-f570-d101075ca857",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        }
+        },
+        "colab_type": "code",
+        "id": "HPqwrISXktRj",
+        "outputId": "472a7556-d2c0-4341-f570-d101075ca857"
       },
-      "source": [
-        "df = pd.DataFrame({'年齢': x_1,\n",
-        "                   '性別': x_2,\n",
-        "                   'CMを見た': Z,\n",
-        "                   '購入量': Y,\n",
-        "                   })\n",
-        "\n",
-        "df.head()  # 先頭を表示\n"
-      ],
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -285,34 +262,38 @@
               "4  27   1    0.0  100.114260"
             ]
           },
+          "execution_count": 6,
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df = pd.DataFrame({'年齢': x_1,\n",
+        "                   '性別': x_2,\n",
+        "                   'CMを見た': Z,\n",
+        "                   '購入量': Y,\n",
+        "                   })\n",
+        "\n",
+        "df.head()  # 先頭を表示\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
-        "id": "HHInQ1Sukrg0",
-        "colab_type": "code",
-        "outputId": "66879f86-ad4f-46cc-9a20-8edf74c860e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
-        }
+        },
+        "colab_type": "code",
+        "id": "HHInQ1Sukrg0",
+        "outputId": "66879f86-ad4f-46cc-9a20-8edf74c860e1"
       },
-      "source": [
-        "# 平均値を比べる\n",
-        "\n",
-        "print(df[df[\"CMを見た\"] == 1.0].mean())\n",
-        "print(\"--------\")\n",
-        "print(df[df[\"CMを見た\"] == 0.0].mean())\n"
-      ],
-      "execution_count": 7,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "年齢       55.836066\n",
@@ -326,16 +307,22 @@
             "CMを見た     0.000000\n",
             "購入量      68.827143\n",
             "dtype: float64\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "# 平均値を比べる\n",
+        "\n",
+        "print(df[df[\"CMを見た\"] == 1.0].mean())\n",
+        "print(\"--------\")\n",
+        "print(df[df[\"CMを見た\"] == 0.0].mean())\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kwKOk59aogBd",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "kwKOk59aogBd"
       },
       "source": [
         "## 決定木で分類\n",
@@ -345,15 +332,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
-        "id": "rBtHC3smoiMC",
-        "colab_type": "code",
-        "outputId": "1b5ab97b-27f8-42fe-dc8b-995d9f6b5d0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        }
+        },
+        "colab_type": "code",
+        "id": "rBtHC3smoiMC",
+        "outputId": "1b5ab97b-27f8-42fe-dc8b-995d9f6b5d0d"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "深さ1の性能： 0.85\n",
+            "深さ2の性能： 0.85\n",
+            "深さ3の性能： 0.825\n"
+          ]
+        }
+      ],
       "source": [
         "# scikit-learnから決定木の分類をimport\n",
         "# https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html\n",
@@ -388,18 +387,6 @@
         "clf = DecisionTreeClassifier(max_depth=3, random_state=0)\n",
         "clf.fit(X_train, Z_train)\n",
         "print(\"深さ3の性能：\", clf.score(X_val, Z_val))  # 正解率を表示\n"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "深さ1の性能： 0.85\n",
-            "深さ2の性能： 0.85\n",
-            "深さ3の性能： 0.825\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -416,15 +403,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
-        "id": "CiVVt59d-gdj",
-        "colab_type": "code",
-        "outputId": "93ee9046-b983-4dbb-d8cb-2d86c14bf7f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        }
+        },
+        "colab_type": "code",
+        "id": "CiVVt59d-gdj",
+        "outputId": "93ee9046-b983-4dbb-d8cb-2d86c14bf7f2"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "深さ2の性能： 0.7257496664596153\n",
+            "深さ3の性能： 0.7399348963931736\n",
+            "深さ4の性能： 0.7165539691159019\n"
+          ]
+        }
+      ],
       "source": [
         "# scikit-learnから決定木の回帰をimport\n",
         "# https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html#sklearn.tree.DecisionTreeRegressor\n",
@@ -459,18 +458,6 @@
         "reg = DecisionTreeRegressor(max_depth=4, random_state=0)\n",
         "reg = reg.fit(X_train, Y_train)\n",
         "print(\"深さ4の性能：\", reg.score(X_val, Y_val))  # 決定係数R2を表示\n"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "深さ2の性能： 0.7257496664596153\n",
-            "深さ3の性能： 0.7399348963931736\n",
-            "深さ4の性能： 0.7165539691159019\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -487,15 +474,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
       "metadata": {
-        "id": "QZCX_vszyRIF",
-        "colab_type": "code",
-        "outputId": "fcc9656b-0c0f-4884-d682-992ba88bb9a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        }
+        },
+        "colab_type": "code",
+        "id": "QZCX_vszyRIF",
+        "outputId": "fcc9656b-0c0f-4884-d682-992ba88bb9a7"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "深さ1の性能： 0.775\n",
+            "深さ2の性能： 0.85\n",
+            "深さ3の性能： 0.825\n"
+          ]
+        }
+      ],
       "source": [
         "# scikit-learnからランダムフォレストの分類をimport\n",
         "# https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html?highlight=randomforest\n",
@@ -526,18 +525,6 @@
         "clf = RandomForestClassifier(max_depth=3, random_state=0)\n",
         "clf.fit(X_train, Z_train)\n",
         "print(\"深さ3の性能：\", clf.score(X_val, Z_val))  # 正解率を表示\n"
-      ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "深さ1の性能： 0.775\n",
-            "深さ2の性能： 0.85\n",
-            "深さ3の性能： 0.825\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -554,15 +541,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
-        "id": "evnAhZnb4DXj",
-        "colab_type": "code",
-        "outputId": "1b439677-66ce-49dc-8760-70916ab7d2fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        }
+        },
+        "colab_type": "code",
+        "id": "evnAhZnb4DXj",
+        "outputId": "1b439677-66ce-49dc-8760-70916ab7d2fc"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "深さ2の性能： 0.7618786062003249\n",
+            "深さ3の性能： 0.7810610687821996\n",
+            "深さ4の性能： 0.7655149049335735\n"
+          ]
+        }
+      ],
       "source": [
         "# scikit-learnから決定木の回帰をimport\n",
         "# https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html?highlight=randomforest\n",
@@ -594,29 +593,40 @@
         "reg = RandomForestRegressor(max_depth=4, random_state=0)\n",
         "reg = reg.fit(X_train, Y_train)\n",
         "print(\"深さ4の性能：\", reg.score(X_val, Y_val))  # 決定係数R2を表示\n"
-      ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "深さ2の性能： 0.7618786062003249\n",
-            "深さ3の性能： 0.7810610687821996\n",
-            "深さ4の性能： 0.7655149049335735\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1IdVhXmMps-w",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "1IdVhXmMps-w"
       },
       "source": [
         "以上"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "5_1_randomforest.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.7.6 (default, Jan  8 2020, 13:42:34) \n[Clang 4.0.1 (tags/RELEASE_401/final)]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "cfa50979a7771829469dd2d410563e07666e6c5b9e78628e47658dba5a2c0f96"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
